# cmake-cookbook

chapter-04/recipe-02-prime/cxx-example/: CMakeLists.txt
